--- a/style.css
+++ b/style.css
@@ -1,3 +1,186 @@
 body {
-    background: #3F3939;
+  margin: 0;
+}
+
+.page {
+	display: grid;
+	font-family: 'Roboto', sans-serif;
+  height: 100vh;
+  grid-template-areas: 
+  "header header header header"
+  "menu mainContent mainContent mainContent"
+  "menu mainContent mainContent mainContent"
+  "menu mainContent mainContent mainContent"
+  "menu mainContent mainContent mainContent"
+  "menu mainContent mainContent mainContent"
+  "menu mainContent mainContent mainContent"
+  "menu mainContent mainContent mainContent"
+  "menu mainContent mainContent mainContent"
+  "footer footer footer footer";
+  grid-template-columns: 10rem 1fr;
+}
+
+.header {
+	align-items: center;
+	background-color: #909590;
+	display: flex;
+	grid-area: header;
+  justify-content: flex-start;
+  padding: 0 0 0 1.25rem;
+}
+
+.header-icon {
+	background-image: url('./images/also logo.png');
+	background-size: cover;
+	height: 4rem;
+  margin-right: 0.5rem;
+	width: 4rem;
+}
+
+.header-title {
+	color: #2C302E;
+	font-family: 'Pridi', serif;
+	font-size: 2.5rem;
+}
+
+.menu {
+	align-items: flex-start;  
+  background-color: #2C302E;
+	display: flex;
+	grid-area: menu;
+	justify-content: center;
+}
+
+.menu-button-container {
+	align-items: center;
+	display: flex;
+	flex-direction: column; 
+	height: 37%;
+	justify-content: space-evenly;
+	width: 65%;
+}
+
+.menu-button {
+	background-color: #ff7f29;
+  border: none;
+	border-radius: 3px;
+	cursor: pointer;
+	font-size: 1rem;
+  font-weight: 600;
+	height: 2rem;
+	width: 100%;
+}
+
+.content {
+	align-items: center;
+	background-color: #474A48;
+	display: flex;
+	grid-area: mainContent;
+	justify-content: center;
+}
+
+.content-background {
+	background-color: #FFF;
+	border-radius: 5px;
+	height: 85%;
+	padding: 1rem;
+  width: 85%;
+}
+
+.content-paragraph {
+	font-size: 1rem;
+}
+
+.footer {
+	align-items: center;
+	background-color: #656565;
+	display: flex;
+	grid-area: footer;
+	justify-content: center;
+	padding: 0.5rem;
+}
+
+@media (max-width: 664px) {
+	.header-icon {
+		height: 3rem;
+		width: 3rem;
+	}
+
+	.header-title {
+		font-size: 2rem;
+	}
+}
+
+@media (max-width: 600px) {
+	.page {
+	  grid-template-areas: 
+	  "header"
+	  "mainContent"
+	  "mainContent"
+	  "mainContent"
+	  "mainContent"
+	  "mainContent"
+	  "mainContent"
+	  "menu"
+	  "menu"
+	  "footer";
+	  grid-template-columns: 1fr;
+	}
+
+	.content-background {
+		margin: 1rem 0;
+	}
+
+	.menu {
+		align-items: center;
+	}
+
+	.menu-button-container {
+		flex-direction: row;
+		margin: 0.5rem;
+    width: 100%;
+	}
+
+	.menu-button {
+		margin: 0.5rem;
+	}
+}
+
+@media (max-width: 553px) {
+	.header-title {
+		font-size: 1.75rem;
+	}	
+}
+
+@media (max-width: 516px) {
+	.header-icon {
+		height: 2.5rem;
+		width: 2.5rem;
+	}
+
+	.header-title {
+		font-size: 1.5rem;
+	}	
+}
+
+@media (max-width: 451px) {
+	.header-icon {
+		height: 2rem;
+		width: 2rem;
+	}
+
+	.header-title {
+		font-size: 1.25rem;
+	}	
+}
+
+@media (max-width: 383px) {
+	.header-icon {
+		height: 1.75rem;
+		width: 1.75rem;
+	}
+
+	.header-title {
+		font-size: 1.15rem;
+	}	
 }
